# grokadamw

./: README.md  grokadamw.py  pyproject.toml  setup.py
grokadamw/: __init__.py  grokadamw.py
