[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grokadamw"
version = "0.1.1"
description = "GrokAdamW optimizer for PyTorch"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["pytorch", "optimizer", "machine learning"]
dependencies = [
    "torch>=1.0.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/grokadamw"
"Bug Tracker" = "https://github.com/yourusername/grokadamw/issues"

[tool.setuptools.packages.find]
include = ["grokadamw*"]